<resources>
    <string name="app_name">YukTanam</string>
    <string name="logo">Logo YukTanam</string>

    <!--  Login  -->
    <string name="login">Masuk</string>
    <string name="email_password">Masukan alamat email dan password Anda untuk Masuk</string>
    <string name="forget_password">Lupa kata sandi?</string>
    <string name="dont_have_account">Belum memiliki akun?</string>
    <string name="logo_email">Email</string>
    <string name="logo_password">Password</string>
    <string name="email_hint">Masukan alamat email kamu</string>
    <string name="password_hint">Masukan kata sandi kamu</string>
    <string name="register">Daftar</string>
    <string name="any_login">Masuk dengan</string>
    <string name="logo_facebook">Facebook</string>
    <string name="logo_google">Google</string>
    <string name="logo_apple">Apple</string>
    <string name="error_email_is_not_valid">Alamat Email tidak valid</string>
    <string name="error_password_too_short">Kata sandi setidaknya harus 8 karakter</string>
    <string name="web_client_id">528469011271-7qqu73qn8fdt7i47d2dc30k8d7m6inmt.apps.googleusercontent.com</string>

    <!-- Register -->
    <string name="person">Nama</string>
    <string name="title_register">Isikan data terlebih dahulu dan pastikan sudah benar dan valid</string>
    <string name="name_hint">Masukan nama kamu</string>
    <string name="have_account">Sudah memiliki akun?</string>
    <string name="confirm_password">Konfirmasi kata sandi</string>

    <!-- Bottom Navigation   -->
    <string name="title_home">Beranda</string>
    <string name="title_challenge">Tantangan</string>
    <string name="title_scan">Deteksi</string>
    <string name="title_favorite">Favorit</string>
    <string name="title_profile">Profile</string>

    <!-- Profile   -->
    <string name="name_profile">Ederson</string>
    <string name="addres">Surabaya, Jawa Timur</string>

    <!-- Menu Setting Profile   -->
    <string name="title_address">Alamat</string>
    <string name="title_language">Bahasa</string>
    <string name="title_dark_mode">Mode Gelap</string>
    <string name="title_logout">Keluar</string>
    <string name="title_help">Bantuan</string>
    <string name="title_privacy">Kebijakan Privasi</string>
    <string name="title_terms">Kebijakan Penggunaan</string>

    <!--  Home  -->
    <string name="category">Kategori</string>
    <string name="see_all">Lihat semua</string>
    <string name="tropis">Tropis</string>
    <string name="sukulen">Sukulen</string>
    <string name="hias">Hias</string>
    <string name="myplant">Tanaman Ku</string>

    <!--  MY PLants  -->
    <string name="leon">Leon</string>
    <string name="monstera">Monstera</string>

    <!-- Add Plants -->
    <string name="back">Kembali</string>
    <string name="thumbnail_image">Gambar Tanaman</string>
    <string name="text_upload">Unggah gambar</string>
    <string name="text_camera">Ambil gambar</string>
    <string name="call_name">Nama panggilan Tanaman</string>
    <string name="origin_name">Nama Tanaman</string>
    <string name="hint_call_name">Masukan panggilan tanaman</string>
    <string name="hint_origin_name">Masukan nama tanaman</string>
    <string name="btnAddPlants">Tambahkan</string>

    <!--    Challenge Item-->
    <string name="judul_misi">Judul Misi</string>
    <string name="deskripsi_misi">Deskripsi Misi</string>
    <string name="xp">25</string>
    <string name="xp_icon">Icon XP</string>
    <string name="img_total_xp">250</string>
    <string name="total_xp">Total XP</string>

    <!--    Fragment Challenge-->
    <string name="mission_icon">Mission Icon</string>
    <string name="total_mission_success">3</string>
    <string name="misi_selesai">Misi Selesai</string>
    <string name="exchange_icon">Exchange Icon</string>
    <string name="Reward">Tukarkan koin dengan hadiah menarik</string>
    <string name="exchange">Tukarkan</string>
    <string name="all_mission">Semua Misi</string>

    <!--  API KEY GEMINI AI  -->
    <string name="title_activity_chatbot">ChatbotActivity</string>

    <string name="firebaseml_model_download_failed">Gagal mendownload model, cek koneksi internet Anda.</string>
    <string name="tflite_is_not_initialized_yet">TfLite is not initialized yet</string>
    <string name="no_tflite_interpreter_loaded">No TFLite interpreter loaded</string>
    <string name="error_during_prediction">Prediksi Error</string>
    <string name="download_success">Model berhasil di download</string>
    <string name="plant_classifier_failed">Prediksi gagal</string>
    <string name="model_download_success">Model berhasil di download</string>

</resources>