<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon_selector"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_challenge"
        android:icon="@drawable/challenge_icon_selector"
        android:title="@string/title_challenge" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/scan_icon_selector"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/favorite_icon_selector"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_item_selector"
        android:title="@string/title_profile" />

</menu>